<!--THESE ARE THE STRING VARIABLES WHICH HAVE BEEN REFERENCED THROUGHOUT THE APPLICATION-->

<resources>
    <string name="app_name">QuoteMe</string>
    <string name="app_login">Login</string>
    <string name="app_password">Password</string>
    <string name="app_email">Email</string>
    <string name="app_notMember">Not a member? Sign up now</string>
    <string name="app_signup">Sign Up</string>
    <string name="app_firstName">First Name</string>
    <string name="app_surname">Surname</string>
    <string name="app_confirmPassword">Confirm Password</string>
    <string name="app_submit">Submit</string>
    <string name="app_requestWork">Request Work</string>
    <string name="app_searchWork">Search Work</string>
    <string name="app_quoteMeTitle">Welcome to QuoteMe!</string>
    <string name="app_notif">Notifications</string>
    <string name="app_account">Account</string>
    <string name="app_premium">Premium</string>
    <string name="app_signout">Sign Out</string>
    <string name="app_manageQuotes">Manage Quotes</string>
    <string name="app_requestQuote">Request Quote</string>
    <string name="app_searchQuote">Search Quote</string>
    <string name="app_respond">Respond</string>
    <string name="app_searchViewForList">Search</string>
    <string name="app_quoteTitle">Quote Title</string>
    <string name="app_trade">Trade</string>
    <string name="app_Location">Location</string>
    <string name="app_searchLocation">Filter by location</string>
    <string name="app_tel">Contact Number</string>
    <string name="app_description">Description of Work</string>
    <string name="app_imageUpload">Image Upload</string>
    <string name="app_imageHint">Add image of required work...</string>
    <string name="app_update">Update</string>

    <string-array name="app_vendors">
        <item>Select a vendor</item>
        <item>Building</item>
        <item>Gardening</item>
        <item>Pluming</item>
        <item>Electrician</item>
        <item>Other</item>
    </string-array>

    <string-array name="app_searchVendors">
        <item>Filter by vendor</item>
        <item>Building</item>
        <item>Gardening</item>
        <item>Pluming</item>
        <item>Electrician</item>
        <item>Other</item>
    </string-array>

    <string name="app_success">Successfully Submitted</string>
    <string name="title_activity_manage_quote">ManageQuoteActivity</string>
    <string name="app_actionAdd">Action</string>
    <string name="app_actionClick">Click \'Action\' to request new quote</string>
    <string name="app_editQuotes">Edit</string>
    <string name="app_editQuote">View/Edit Quote</string>
    <string name="app_deleteQuotes">Delete</string>
    <string name="app_selectQuote">Select Quote</string>

    <string name="app_float_options_title">Choose an Action</string>
    <string-array name="app_float_options">
        <item>Add a Quote</item>
        <item>Delete all Quotes</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="app_float_yesNo">
        <item>Yes</item>
        <item>No</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="app_image_capture">
        <item>Take picture</item>
        <item>Access gallery</item>
        <item>Cancel</item>
    </string-array>

    <string name="app_deleteAllConfirmation">Are you sure you want to delete all quotes?</string>
    <string name="app_deleteQuotesInfo">quote(s) have been deleted</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_pending">PENDING</string>
    <string name="app_accepted">ACCEPTED</string>
    <string name="title_activity_maps">Map</string>
</resources>
