<?xml version="1.0" encoding="utf-8"?>

<!-- ***MENU***-->
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_account"
        android:title="@string/app_account"
        android:icon="@drawable/outline_account_circle_white_36"
        app:showAsAction="always">
        <!-- ***SUB MENU***-->
        <menu>
        <item android:id="@+id/action_signout"
        android:title="@string/app_signout" />
            <item android:id="@+id/action_manageQuotes"
                android:title="@string/app_manageQuotes" />
        </menu>
    </item>

    <item android:id="@+id/action_premium"
        android:title="@string/app_premium"
        android:icon="@drawable/baseline_star_black_36"
        app:showAsAction="never"/>
</menu>
    <!-- ***MENU***-->
