<?xml version="1.0" encoding="utf-8"?>

<!-- ***MENU***-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--THIS REPRESENTS THE NOTIFICATION ICON AS PART OF THE EXTENDED TASK-->
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/baseline_notification_important_white_24"
        android:title="@string/app_notif"
        app:showAsAction="always">
    </item>

    <!--THIS REPRESENTS THE PROFILE ICON. WHEN IT IS CLICKED A SUBMENU WILL APPEAR
       CONTAINED 2 ITEMS. SEE SUBMENU BELOW-->
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/outline_account_circle_white_36"
        android:title="@string/app_account"
        app:showAsAction="always">
        <!-- ***SUB MENU***-->
        <!-- ***THE SUB MENU HERE ALLOW THE USERS TO SIGN OUT OR MANAGE THEIR QUOTES***-->

        <menu>
            <item
                android:id="@+id/action_signout"
                android:icon="@drawable/baseline_account_circle_black_18"
                android:title="@string/app_signout"></item>
            <item
                android:id="@+id/action_manageQuotes"
                android:icon="@drawable/baseline_build_black_18dp"
                android:title="@string/app_manageQuotes"></item>
        </menu>
        <!-- ***SUB MENU***-->
    </item>
</menu>
    <!-- ***MENU***-->
